--- a/index.html
+++ b/index.html
@@ -8,30 +8,6 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Brand</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
   <!-- Hero Section -->
   <section class="hero">
     <div class="container">
@@ -43,55 +19,92 @@
           <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#contactModal">Contact Us</button>
         </div>
         <div class="col-md-6">
-          <img src="img/hero-image.jpg" class="img-fluid" alt="Hero Image">
+          <img src="img/hero.png" class="img-fluid" alt="Hero Image">
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Company Growth Section -->
-  <section class="company-growth text-center">
-    <div class="container">
-      <h2 class="text-danger">Experts Growth</h2>
-      <h3>Our Company Growth</h3>
-      <div class="row">
-        <div class="col-md-3">
-          <div class="card">
-            <div class="card-body">
-              <i class="icon-heart"></i>
-              <h4>199+</h4>
-              <p>Satisfied Customers</p>
+  <!-- What We Do Section -->
+  <section class="what-we-do" style="background: #FAFAFA; padding: 50px 0;">
+    <div class="container text-center">
+      <h2 class="text-danger">What We Do</h2>
+      <h3>Services Provide For You</h3>
+      <p>Morbi sed lacus nec risus finibus feugiat at fermentum nibh. Pellentesque vitae ante at elit fringilla ac at purus.</p>
+    </div>
+    <div id="whatWeDoCarousel" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#whatWeDoCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#whatWeDoCarousel" data-slide-to="1"></li>
+        <li data-target="#whatWeDoCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="img/1-2.png" class="d-block w-100 carousel-img" alt="Service 1">
+              </div>
+              <div class="col-md-4">
+                <img src="img/2-2.png" class="d-block w-100 carousel-img" alt="Service 2">
+              </div>
+              <div class="col-md-4">
+                <div class="service-card">
+                  <h4>Web Development</h4>
+                  <p>Morbi sed lacus nec risus finibus feugiat at fermentum nibh. Pellentesque vitae ante at elit fringilla ac at purus.</p>
+                  <button class="btn btn-danger read-more-btn">Read More <img src="img/arrow.png" alt="Arrow"></button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="card">
-            <div class="card-body">
-              <i class="icon-clock"></i>
-              <h4>1591+</h4>
-              <p>Days of Operation</p>
+        <div class="carousel-item">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="img/3-2.png" class="d-block w-100 carousel-img" alt="Service 3">
+              </div>
+              <div class="col-md-4">
+                <img src="img/2-2.png" class="d-block w-100 carousel-img" alt="Service 4">
+              </div>
+              <div class="col-md-4">
+                <div class="service-card">
+                  <h4>Mobile Development</h4>
+                  <p>Morbi sed lacus nec risus finibus feugiat at fermentum nibh. Pellentesque vitae ante at elit fringilla ac at purus.</p>
+                  <button class="btn btn-danger read-more-btn">Read More <img src="img/arrow.png" alt="Arrow"></button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="card">
-            <div class="card-body">
-              <i class="icon-check"></i>
-              <h4>283+</h4>
-              <p>Complete Projects</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card">
-            <div class="card-body">
-              <i class="icon-trophy"></i>
-              <h4>75+</h4>
-              <p>Win Awards</p>
+        <div class="carousel-item">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="img/1-2.png" class="d-block w-100 carousel-img" alt="Service 5">
+              </div>
+              <div class="col-md-4">
+                <img src="img/3-2.png" class="d-block w-100 carousel-img" alt="Service 6">
+              </div>
+              <div class="col-md-4">
+                <div class="service-card">
+                  <h4>Digital Marketing</h4>
+                  <p>Morbi sed lacus nec risus finibus feugiat at fermentum nibh. Pellentesque vitae ante at elit fringilla ac at purus.</p>
+                  <button class="btn btn-danger read-more-btn">Read More <img src="img/arrow.png" alt="Arrow"></button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
+      <a class="carousel-control-prev" href="#whatWeDoCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#whatWeDoCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
   </section>
 
@@ -102,20 +115,65 @@
       <h3>Why We Are Best</h3>
       <div class="row">
         <div class="col-md-6">
-          <img id="project-image" src="img/project1.jpg" class="img-fluid" alt="Project Image">
+          <img id="project-image" src="img/image.png" class="img-fluid" alt="Project Image">
         </div>
         <div class="col-md-6">
-          <div class="project-content" data-img="img/project1.jpg">
+          <div class="project-content" data-img="img/image.png">
             <h4>Genderless Kei - Japan's Hot</h4>
             <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it’s offering lots of</p>
           </div>
-          <div class="project-content" data-img="img/project2.jpg">
+          <div class="project-content" data-img="img/image.png">
             <h4 class="text-danger">Better Strategy & Quality</h4>
             <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it’s offering lots of</p>
           </div>
-          <div class="project-content" data-img="img/project3.jpg">
+          <div class="project-content" data-img="img/image.png">
             <h4>Genderless Kei - Japan's Hot</h4>
             <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it’s offering lots of</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Company Growth Section -->
+  <section class="company-growth text-center">
+    <div class="container">
+      <h2 class="text-danger">Experts Growth</h2>
+      <h3>Our Company Growth</h3>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="card highlight-on-hover">
+            <div class="card-body">
+              <img src="img/heart (2).png" alt="Heart Icon">
+              <h4>199+</h4>
+              <p>Satisfied Customers</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card highlight-on-hover">
+            <div class="card-body">
+              <img src="img/clock (3).png" alt="Clock Icon">
+              <h4>1591+</h4>
+              <p>Days of Operation</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card highlight-on-hover">
+            <div class="card-body">
+              <img src="img/Path 4402.png" alt="Check Icon">
+              <h4>283+</h4>
+              <p>Completed Projects</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card highlight-on-hover">
+            <div class="card-body">
+              <img src="img/Path 4406.png" alt="Trophy Icon">
+              <h4>75+</h4>
+              <p>Awards Won</p>
+            </div>
           </div>
         </div>
       </div>
