--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <h2 class="text-danger">Award Winning</h2>
           <h1>Digital Marketing Agency</h1>
           <p>Morbi sed lacus nec risus finibus feugiat at fermentum nibh. Pellentesque vitae ante at elit fringilla ac at purus.</p>
-          <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#contactModal">Contact Us</button>
+          <button type="button" class="btn btn-danger contact-us-btn" data-toggle="modal" data-target="#contactModal">Contact Us</button>
         </div>
         <div class="col-md-6">
           <img src="img/hero.png" class="img-fluid" alt="Hero Image">
@@ -27,84 +27,78 @@
 
   <!-- What We Do Section -->
   <section class="what-we-do" style="background: #FAFAFA; padding: 50px 0;">
-    <div class="container text-center">
-      <h2 class="text-danger">What We Do</h2>
-      <h3>Services Provide For You</h3>
-      <p>Morbi sed lacus nec risus finibus feugiat at fermentum nibh. Pellentesque vitae ante at elit fringilla ac at purus.</p>
-    </div>
-    <div id="whatWeDoCarousel" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#whatWeDoCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#whatWeDoCarousel" data-slide-to="1"></li>
-        <li data-target="#whatWeDoCarousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-4">
-                <img src="img/1-2.png" class="d-block w-100 carousel-img" alt="Service 1">
-              </div>
-              <div class="col-md-4">
-                <img src="img/2-2.png" class="d-block w-100 carousel-img" alt="Service 2">
-              </div>
-              <div class="col-md-4">
-                <div class="service-card">
-                  <h4>Web Development</h4>
-                  <p>Morbi sed lacus nec risus finibus feugiat at fermentum nibh. Pellentesque vitae ante at elit fringilla ac at purus.</p>
-                  <button class="btn btn-danger read-more-btn">Read More <img src="img/arrow.png" alt="Arrow"></button>
-                </div>
-              </div>
-            </div>
-          </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h2 class="text-danger">What We Do</h2>
+          <h3 class="services-title">Services Provide For You</h3>
         </div>
-        <div class="carousel-item">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-4">
-                <img src="img/3-2.png" class="d-block w-100 carousel-img" alt="Service 3">
-              </div>
-              <div class="col-md-4">
-                <img src="img/2-2.png" class="d-block w-100 carousel-img" alt="Service 4">
-              </div>
-              <div class="col-md-4">
-                <div class="service-card">
-                  <h4>Mobile Development</h4>
-                  <p>Morbi sed lacus nec risus finibus feugiat at fermentum nibh. Pellentesque vitae ante at elit fringilla ac at purus.</p>
-                  <button class="btn btn-danger read-more-btn">Read More <img src="img/arrow.png" alt="Arrow"></button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-4">
-                <img src="img/1-2.png" class="d-block w-100 carousel-img" alt="Service 5">
-              </div>
-              <div class="col-md-4">
-                <img src="img/3-2.png" class="d-block w-100 carousel-img" alt="Service 6">
-              </div>
-              <div class="col-md-4">
-                <div class="service-card">
-                  <h4>Digital Marketing</h4>
-                  <p>Morbi sed lacus nec risus finibus feugiat at fermentum nibh. Pellentesque vitae ante at elit fringilla ac at purus.</p>
-                  <button class="btn btn-danger read-more-btn">Read More <img src="img/arrow.png" alt="Arrow"></button>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="col-md-6">
+          <p class="what-we-do-paragraph">Morbi sed lacus nec risus finibus feugiat et fermentum nibh. Pellentesque vitae ante at elit fringilla ac at purus, Morbi sed lacus nec risus finibus feugiat et fermentum.</p>
         </div>
       </div>
-      <a class="carousel-control-prev" href="#whatWeDoCarousel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#whatWeDoCarousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+      <div id="whatWeDoCarousel" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/1-2.png" class="d-block w-100" alt="Service 1">
+          </div>
+          <div class="carousel-item">
+            <img src="img/2-2.png" class="d-block w-100" alt="Service 2">
+          </div>
+          <div class="carousel-item">
+            <img src="img/3-2.png" class="d-block w-100" alt="Service 3">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#whatWeDoCarousel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#whatWeDoCarousel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+        <ol class="carousel-indicators custom-indicators">
+          <li data-target="#whatWeDoCarousel" data-slide-to="0" class="active">
+            <img src="img/1.png" alt="Indicator 1">
+          </li>
+          <li data-target="#whatWeDoCarousel" data-slide-to="1">
+            <img src="img/2.png" alt="Indicator 2">
+          </li>
+          <li data-target="#whatWeDoCarousel" data-slide-to="2">
+            <img src="img/3.png" alt="Indicator 3">
+          </li>
+        </ol>
+      </div>
+    </div>
+  </section>
+
+  <!-- Why Choose Us Section -->
+  <section class="why-choose-us" style="padding: 50px 0;">
+    <div class="container">
+      <h2 class="text-center text-danger">Why Choose Us</h2>
+      <h3 class="text-center">Why We Are Best</h3>
+      <div class="row text-center">
+        <div class="col-md-3">
+          <img src="img/target.png" alt="Clarified Vision & Target" class="img-fluid mb-3">
+          <h4>Clarified Vision & Target</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur sadipscing elitr, sed diam nonumy.</p>
+        </div>
+        <div class="col-md-3">
+          <img src="img/performance.png" alt="High Performance" class="img-fluid mb-3">
+          <h4>High Performance</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur sadipscing elitr, sed diam nonumy.</p>
+        </div>
+        <div class="col-md-3">
+          <img src="img/security.png" alt="Maintain Security" class="img-fluid mb-3">
+          <h4>Maintain Security</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur sadipscing elitr, sed diam nonumy.</p>
+        </div>
+        <div class="col-md-3">
+          <img src="img/strategy.png" alt="Better Strategy & Quality" class="img-fluid mb-3">
+          <h4>Better Strategy & Quality</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur sadipscing elitr, sed diam nonumy.</p>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -134,6 +128,7 @@
       </div>
     </div>
   </section>
+
   <!-- Company Growth Section -->
   <section class="company-growth text-center">
     <div class="container">
@@ -180,6 +175,23 @@
     </div>
   </section>
 
+  <!-- Client's Feedback Section -->
+  <section class="client-feedback" style="padding: 50px 0; background: #FAFAFA;">
+    <div class="container text-center">
+      <h2 class="text-danger">Client's Feedback</h2>
+      <h3>People Say's About Us!</h3>
+      <p><strong>Jannat Tumpa</strong> The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections Bonorum et Malorum original.</p>
+      <p class="text-danger"><strong>JANNAT TUMPA</strong> - COO, AMERIMAR ENTERPRISES, INC.</p>
+    </div>
+  </section>
+
+  <!-- Partners Section -->
+  <section class="partners" style="background: transparent url('img/NoPath - Copy.png') 0% 0% no-repeat padding-box; opacity: 0.81; padding: 50px 0;">
+    <div class="container text-center">
+      <img src="img/Group 500.png" class="img-fluid" alt="Partners">
+    </div>
+  </section>
+
   <!-- Contact Modal -->
   <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -191,23 +203,25 @@
           </button>
         </div>
         <div class="modal-body">
-          <form id="contactForm">
+          <form action="https://getform.io/f/zaxdeypa" method="POST" id="contactForm">
             <div class="form-group">
               <label for="email">Work Email</label>
-              <input type="email" class="form-control" id="email" required>
+              <input type="email" class="form-control" id="email" name="email" required>
             </div>
             <div class="form-group">
               <label for="firstName">First Name</label>
-              <input type="text" class="form-control" id="firstName" required>
+              <input type="text" class="form-control" id="firstName" name="firstName" required>
             </div>
             <div class="form-group">
               <label for="lastName">Last Name</label>
-              <input type="text" class="form-control" id="lastName" required>
+              <input type="text" class="form-control" id="lastName" name="lastName" required>
             </div>
             <div class="form-group form-check">
-              <input type="checkbox" class="form-check-input" id="consent" required>
+              <input type="checkbox" class="form-check-input" id="consent" name="consent" required>
               <label class="form-check-label" for="consent">I agree to Fyle's terms and conditions, and provide consent to send me communication.</label>
             </div>
+            <!-- Honeypot field to prevent spam -->
+            <input type="hidden" name="_gotcha" style="display:none !important">
             <button type="submit" class="btn btn-danger">Contact Us</button>
           </form>
         </div>
