--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6">
-          <h2 class="text-danger">Award Winning</h2>
-          <h1>Digital Marketing Agency</h1>
-          <p>Morbi sed lacus nec risus finibus feugiat at fermentum nibh. Pellentesque vitae ante at elit fringilla ac at purus.</p>
+          <h2 class="award-winning-heading">Award Winning</h2>
+          <h1 class="digital-marketing-agency-heading">Digital Marketing Agency</h1>
+          <p class="hero-paragraph">Morbi sed lacus nec risus finibus feugiat et fermentum nibh. Pellentesque vitae ante at elit fringilla ac at purus, Morbi sed lacus nec risus finibus feugiat et fermentum.</p>
           <button type="button" class="btn btn-danger contact-us-btn" data-toggle="modal" data-target="#contactModal">Contact Us</button>
         </div>
         <div class="col-md-6">
-          <img src="img/hero.png" class="img-fluid" alt="Hero Image">
+          <img src="img/hero.png" class="img-fluid hero-image" alt="Hero Image">
         </div>
       </div>
     </div>
@@ -30,44 +30,36 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h2 class="text-danger">What We Do</h2>
-          <h3 class="services-title">Services Provide For You</h3>
+          <h2 class="what-we-do-heading">What We Do</h2>
+          <h3 class="services-provide-heading">Services Provide For You</h3>
         </div>
         <div class="col-md-6">
-          <p class="what-we-do-paragraph">Morbi sed lacus nec risus finibus feugiat et fermentum nibh. Pellentesque vitae ante at elit fringilla ac at purus, Morbi sed lacus nec risus finibus feugiat et fermentum.</p>
+          <p class="updated-what-we-do-paragraph">Morbi sed lacus nec risus finibus feugiat et fermentum nibh. Pellentesque vitae ante at elit fringilla ac at purus, Morbi sed lacus nec risus finibus feugiat et fermentum.</p>
         </div>
       </div>
-      <div id="whatWeDoCarousel" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/1-2.png" class="d-block w-100" alt="Service 1">
-          </div>
-          <div class="carousel-item">
-            <img src="img/2-2.png" class="d-block w-100" alt="Service 2">
-          </div>
-          <div class="carousel-item">
-            <img src="img/3-2.png" class="d-block w-100" alt="Service 3">
+      <div class="row">
+        <div class="col-md-3 position-relative">
+          <img id="carouselImage" src="img/1-2.png" class="d-block w-100" alt="Service 1">
+          <div class="carousel-indicators custom-indicators">
+            <img src="img/1.svg" data-slide-to="0" class="dot active" alt="Red Dot">
+            <img src="img/2.svg" data-slide-to="1" class="dot" alt="Black Dot">
+            <img src="img/2.svg" data-slide-to="2" class="dot" alt="Black Dot">
           </div>
         </div>
-        <a class="carousel-control-prev" href="#whatWeDoCarousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#whatWeDoCarousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-        <ol class="carousel-indicators custom-indicators">
-          <li data-target="#whatWeDoCarousel" data-slide-to="0" class="active">
-            <img src="img/1.png" alt="Indicator 1">
-          </li>
-          <li data-target="#whatWeDoCarousel" data-slide-to="1">
-            <img src="img/2.png" alt="Indicator 2">
-          </li>
-          <li data-target="#whatWeDoCarousel" data-slide-to="2">
-            <img src="img/3.png" alt="Indicator 3">
-          </li>
-        </ol>
+        <div class="col-md-3">
+          <img src="img/2-2.png" class="d-block w-100" alt="Service 2">
+        </div>
+        <div class="col-md-3">
+            <div class="service-card">
+              <img src="img/icon.png" alt="Web Development Icon" class="img-fluid">
+              <h4>Web Development</h4>
+              <p>Morbi sed lacus nec risus finibus feugiat at fermentum nibh. Pellentesque vitae ante at elit fringilla ac at purus.</p>
+              <button class="btn btn-light read-more-btn">Read More <img src="img/arrow.png" alt="Arrow"></button>
+            </div>
+          </div>
+        <div class="col-md-3">
+          <img src="img/3-2.png" class="d-block w-100" alt="Service 3">
+        </div>
       </div>
     </div>
   </section>
@@ -77,26 +69,30 @@
     <div class="container">
       <h2 class="text-center text-danger">Why Choose Us</h2>
       <h3 class="text-center">Why We Are Best</h3>
-      <div class="row text-center">
+      <div class="row">
+        <!-- Clarified Vision & Target -->
         <div class="col-md-3">
-          <img src="img/target.png" alt="Clarified Vision & Target" class="img-fluid mb-3">
-          <h4>Clarified Vision & Target</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur sadipscing elitr, sed diam nonumy.</p>
+          <img src="img/1.png" alt="Clarified Vision & Target" class="clarified-vision-icon">
+          <h4 class="clarified-vision-heading">Clarified Vision & Target</h4>
+          <p class="clarified-vision-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
         </div>
+        <!-- High Performance -->
         <div class="col-md-3">
-          <img src="img/performance.png" alt="High Performance" class="img-fluid mb-3">
-          <h4>High Performance</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur sadipscing elitr, sed diam nonumy.</p>
+          <img src="img/2.png" alt="High Performance" class="high-performance-icon">
+          <h4 class="high-performance-heading">High Performance</h4>
+          <p class="high-performance-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
         </div>
+        <!-- Maintain Security -->
         <div class="col-md-3">
-          <img src="img/security.png" alt="Maintain Security" class="img-fluid mb-3">
-          <h4>Maintain Security</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur sadipscing elitr, sed diam nonumy.</p>
+          <img src="img/3.png" alt="Maintain Security" class="maintain-security-icon">
+          <h4 class="maintain-security-heading">Maintain Security</h4>
+          <p class="maintain-security-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
         </div>
+        <!-- Better Strategy & Quality -->
         <div class="col-md-3">
-          <img src="img/strategy.png" alt="Better Strategy & Quality" class="img-fluid mb-3">
-          <h4>Better Strategy & Quality</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur sadipscing elitr, sed diam nonumy.</p>
+          <img src="img/4.png" alt="Better Strategy & Quality" class="better-strategy-icon">
+          <h4 class="better-strategy-heading">Better Strategy & Quality</h4>
+          <p class="better-strategy-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
         </div>
       </div>
     </div>
@@ -129,51 +125,52 @@
     </div>
   </section>
 
-  <!-- Company Growth Section -->
-  <section class="company-growth text-center">
+<!-- Company Growth Section -->
+<section class="company-growth text-center">
     <div class="container">
-      <h2 class="text-danger">Experts Growth</h2>
-      <h3>Our Company Growth</h3>
-      <div class="row">
-        <div class="col-md-3">
-          <div class="card highlight-on-hover">
-            <div class="card-body">
-              <img src="img/heart (2).png" alt="Heart Icon">
-              <h4>199+</h4>
-              <p>Satisfied Customers</p>
+        <h2 class="text-danger">Experts Growth</h2>
+        <h3>Our Company Growth</h3>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="card highlight-on-hover">
+                    <div class="card-body">
+                        <img src="img/heart (2).png" alt="Heart Icon">
+                        <h4>199 +</h4>
+                        <p>Satisfied Customers</p>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card highlight-on-hover">
-            <div class="card-body">
-              <img src="img/clock (3).png" alt="Clock Icon">
-              <h4>1591+</h4>
-              <p>Days of Operation</p>
+            <div class="col-md-3">
+                <div class="card highlight-on-hover">
+                    <div class="card-body">
+                        <img src="img/clock (3).png" alt="Clock Icon">
+                        <h4>1591 +</h4>
+                        <p>Days Of Operation</p>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card highlight-on-hover">
-            <div class="card-body">
-              <img src="img/Path 4402.png" alt="Check Icon">
-              <h4>283+</h4>
-              <p>Completed Projects</p>
+            <div class="col-md-3">
+                <div class="card highlight-on-hover">
+                    <div class="card-body">
+                        <img src="img/Path 4402.png" alt="Check Icon">
+                        <h4>283 +</h4>
+                        <p>Completed Projects</p>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card highlight-on-hover">
-            <div class="card-body">
-              <img src="img/Path 4406.png" alt="Trophy Icon">
-              <h4>75+</h4>
-              <p>Awards Won</p>
+            <div class="col-md-3">
+                <div class="card highlight-on-hover">
+                    <div class="card-body">
+                        <img src="img/Path 4406.png" alt="Trophy Icon">
+                        <h4>75 +</h4>
+                        <p>Win Awards</p>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </section>
+</section>
+
 
   <!-- Client's Feedback Section -->
   <section class="client-feedback" style="padding: 50px 0; background: #FAFAFA;">
@@ -186,7 +183,7 @@
   </section>
 
   <!-- Partners Section -->
-  <section class="partners" style="background: transparent url('img/NoPath - Copy.png') 0% 0% no-repeat padding-box; opacity: 0.81; padding: 50px 0;">
+  <section class="partners" style="background: transparent url('img/NoPath - Copy.png') 0% 0% no-repeat padding-box; opacity: 1; padding: 50px 0;">
     <div class="container text-center">
       <img src="img/Group 500.png" class="img-fluid" alt="Partners">
     </div>
