--- a/index.html
+++ b/index.html
@@ -64,66 +64,65 @@
     </div>
   </section>
 
-  <!-- Why Choose Us Section -->
-  <section class="why-choose-us" style="padding: 50px 0;">
+ <!-- Why Choose Us Section -->
+<section class="why-choose-us" style="padding: 50px 0;">
     <div class="container">
-      <h2 class="text-center text-danger">Why Choose Us</h2>
-      <h3 class="text-center">Why We Are Best</h3>
-      <div class="row">
-        <!-- Clarified Vision & Target -->
-        <div class="col-md-3">
-          <img src="img/1.png" alt="Clarified Vision & Target" class="clarified-vision-icon">
-          <h4 class="clarified-vision-heading">Clarified Vision & Target</h4>
-          <p class="clarified-vision-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
+        <h2 class="text-center text-danger">Why Choose Us</h2>
+        <h3 class="text-center">Why We Are Best</h3>
+        <div class="row">
+            <!-- Clarified Vision & Target -->
+            <div class="col-md-3 text-container">
+                <img src="img/1.png" alt="Clarified Vision & Target" class="clarified-vision-icon">
+                <h4 class="clarified-vision-heading">Clarified Vision & Target</h4>
+                <p class="clarified-vision-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
+            </div>
+            <!-- High Performance -->
+            <div class="col-md-3 text-container">
+                <img src="img/2.png" alt="High Performance" class="high-performance-icon">
+                <h4 class="high-performance-heading">High Performance</h4>
+                <p class="high-performance-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
+            </div>
+            <!-- Maintain Security -->
+            <div class="col-md-3 text-container">
+                <img src="img/3.png" alt="Maintain Security" class="maintain-security-icon">
+                <h4 class="maintain-security-heading">Maintain Security</h4>
+                <p class="maintain-security-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
+            </div>
+            <!-- Better Strategy & Quality -->
+            <div class="col-md-3 text-container">
+                <img src="img/4.png" alt="Better Strategy & Quality" class="better-strategy-icon">
+                <h4 class="better-strategy-heading">Better Strategy & Quality</h4>
+                <p class="better-strategy-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
+            </div>
         </div>
-        <!-- High Performance -->
-        <div class="col-md-3">
-          <img src="img/2.png" alt="High Performance" class="high-performance-icon">
-          <h4 class="high-performance-heading">High Performance</h4>
-          <p class="high-performance-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
-        </div>
-        <!-- Maintain Security -->
-        <div class="col-md-3">
-          <img src="img/3.png" alt="Maintain Security" class="maintain-security-icon">
-          <h4 class="maintain-security-heading">Maintain Security</h4>
-          <p class="maintain-security-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
-        </div>
-        <!-- Better Strategy & Quality -->
-        <div class="col-md-3">
-          <img src="img/4.png" alt="Better Strategy & Quality" class="better-strategy-icon">
-          <h4 class="better-strategy-heading">Better Strategy & Quality</h4>
-          <p class="better-strategy-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
-        </div>
-      </div>
     </div>
-  </section>
-
-  <!-- Our Project Section -->
-  <section class="our-project">
+</section>
+<!-- Our Project Section -->
+<section class="our-project">
     <div class="container">
-      <h2 class="text-danger">Our Project</h2>
-      <h3>Why We Are Best</h3>
-      <div class="row">
-        <div class="col-md-6">
-          <img id="project-image" src="img/image.png" class="img-fluid" alt="Project Image">
+        <h2 class="text-danger">Our Project</h2>
+        <h3>Why We Are Best</h3>
+        <div class="row">
+            <div class="col-md-6">
+                <img id="project-image" src="img/image.png" class="img-fluid" alt="Project Image">
+            </div>
+            <div class="col-md-6">
+                <div class="project-content" data-img="img/image.png">
+                    <h4>Genderless Kei - Japan's Hot</h4>
+                    <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it’s offering lots of</p>
+                </div>
+                <div class="project-content" data-img="img/image.png">
+                    <h4>Better Strategy & Quality</h4>
+                    <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it’s offering lots of</p>
+                </div>
+                <div class="project-content" data-img="img/image.png">
+                    <h4>Genderless Kei - Japan's Hot</h4>
+                    <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it’s offering lots of</p>
+                </div>
+            </div>
         </div>
-        <div class="col-md-6">
-          <div class="project-content" data-img="img/image.png">
-            <h4>Genderless Kei - Japan's Hot</h4>
-            <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it’s offering lots of</p>
-          </div>
-          <div class="project-content" data-img="img/image.png">
-            <h4 class="text-danger">Better Strategy & Quality</h4>
-            <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it’s offering lots of</p>
-          </div>
-          <div class="project-content" data-img="img/image.png">
-            <h4>Genderless Kei - Japan's Hot</h4>
-            <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it’s offering lots of</p>
-          </div>
-        </div>
-      </div>
     </div>
-  </section>
+</section>
 
 <!-- Company Growth Section -->
 <section class="company-growth text-center">
