Final Commit-Task Completed
Final Commit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Digital Marketing Agency</title>
+  <title>Fyle Assigment</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -13,10 +13,10 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6">
-          <h2 class="award-winning-heading">Award Winning</h2>
+          <h2 class="award-winning-heading">AWARD WINNING</h2>
           <h1 class="digital-marketing-agency-heading">Digital Marketing Agency</h1>
           <p class="hero-paragraph">Morbi sed lacus nec risus finibus feugiat et fermentum nibh. Pellentesque vitae ante at elit fringilla ac at purus, Morbi sed lacus nec risus finibus feugiat et fermentum.</p>
-          <button type="button" class="btn btn-danger contact-us-btn" data-toggle="modal" data-target="#contactModal">Contact Us</button>
+          <button type="button" class="btn btn-danger contact-us-btn" data-toggle="modal" data-target="#contactModal">CONTACT US</button>
         </div>
         <div class="col-md-6">
           <img src="img/hero.png" class="img-fluid hero-image" alt="Hero Image">
@@ -30,7 +30,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h2 class="what-we-do-heading">What We Do</h2>
+          <h2 class="what-we-do-heading">WHAT WE DO</h2>
           <h3 class="services-provide-heading">Services Provide For You</h3>
         </div>
         <div class="col-md-6">
@@ -54,7 +54,7 @@
               <img src="img/icon.png" alt="Web Development Icon" class="img-fluid">
               <h4>Web Development</h4>
               <p>Morbi sed lacus nec risus finibus feugiat at fermentum nibh. Pellentesque vitae ante at elit fringilla ac at purus.</p>
-              <button class="btn btn-light read-more-btn">Read More <img src="img/arrow.png" alt="Arrow"></button>
+              <button class="btn btn-light read-more-btn">READ MORE <img src="img/arrow.png" alt="Arrow"></button>
             </div>
           </div>
         <div class="col-md-3">
@@ -67,8 +67,8 @@
  <!-- Why Choose Us Section -->
 <section class="why-choose-us" style="padding: 50px 0;">
     <div class="container">
-        <h2 class="text-center text-danger">Why Choose Us</h2>
-        <h3 class="text-center">Why We Are Best</h3>
+        <h2 class="text-center text-danger">WHY CHOOSE US</h2>
+        <h3  class="text-center">WHY WE ARE BEST</h3>
         <div class="row">
             <!-- Clarified Vision & Target -->
             <div class="col-md-3 text-container">
@@ -100,18 +100,18 @@
 <!-- Our Project Section -->
 <section class="our-project">
     <div class="container">
-        <h2 class="text-danger">Our Project</h2>
-        <h3>Why We Are Best</h3>
+        <h2 class="text-center text-danger">OUR PROJECT</h2>
+        <h3  class="text-center">WHY WE ARE BEST</h3>
         <div class="row">
             <div class="col-md-6">
                 <img id="project-image" src="img/image.png" class="img-fluid" alt="Project Image">
             </div>
             <div class="col-md-6">
-                <div class="project-content" data-img="img/image.png">
+                <div class="project-content" data-img="img/food1.jpg">
                     <h4>Genderless Kei - Japan's Hot</h4>
                     <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it’s offering lots of</p>
                 </div>
-                <div class="project-content" data-img="img/image.png">
+                <div class="project-content" data-img="img/food2.jpg">
                     <h4>Better Strategy & Quality</h4>
                     <p>Set to launch on the manufacturer's new A330neo aircraft in 2017, it’s offering lots of</p>
                 </div>
@@ -127,8 +127,8 @@
 <!-- Company Growth Section -->
 <section class="company-growth text-center">
     <div class="container">
-        <h2 class="text-danger">Experts Growth</h2>
-        <h3>Our Company Growth</h3>
+        <h2 class="text-danger">EXPERTS GROWTH</h2>
+        <h3>OUR COMPANY GROWTH</h3>
         <div class="row">
             <div class="col-md-3">
                 <div class="card highlight-on-hover">
@@ -144,7 +144,7 @@
                     <div class="card-body">
                         <img src="img/clock (3).png" alt="Clock Icon">
                         <h4>1591 +</h4>
-                        <p>Days Of Operation</p>
+                        <p>Days of Operation</p>
                     </div>
                 </div>
             </div>
@@ -162,7 +162,7 @@
                     <div class="card-body">
                         <img src="img/Path 4406.png" alt="Trophy Icon">
                         <h4>75 +</h4>
-                        <p>Win Awards</p>
+                        <p>Won Awards</p>
                     </div>
                 </div>
             </div>
@@ -170,26 +170,30 @@
     </div>
 </section>
 
-
-  <!-- Client's Feedback Section -->
-  <section class="client-feedback" style="padding: 50px 0; background: #FAFAFA;">
+<!-- Client's Feedback Section -->
+<section class="client-feedback" style="padding: 50px 0; background: #FAFAFA;">
     <div class="container text-center">
-      <h2 class="text-danger">Client's Feedback</h2>
-      <h3>People Say's About Us!</h3>
-      <p><strong>Jannat Tumpa</strong> The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections Bonorum et Malorum original.</p>
-      <p class="text-danger"><strong>JANNAT TUMPA</strong> - COO, AMERIMAR ENTERPRISES, INC.</p>
+        <h2 class="text-danger">CLIENT'S FEEDBACK</h2>
+        <h3>PEOPLE SAY'S ABOUT US!</h3>
+        <div class="feedback d-flex justify-content-center align-items-start">
+            <img src="img/Quotemarks-left.png" class="quote-mark" alt="Quote Mark">
+            <div class="feedback-text-container text-left">
+                <p class="client-feedback-text"><strong>Jannat Tumpa</strong> The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections Bonorum et Malorum original.</p>
+                <p class="client-name text-danger"><strong>JANNAT TUMPA</strong> - COO, AMERIMAR ENTERPRISES, INC.</p>
+            </div>
+        </div>
     </div>
-  </section>
+</section>
 
-  <!-- Partners Section -->
-  <section class="partners" style="background: transparent url('img/NoPath - Copy.png') 0% 0% no-repeat padding-box; opacity: 1; padding: 50px 0;">
+ <!-- Partners Section -->
+<section class="partners" style="background: #fc011a; padding: 50px 0;">
     <div class="container text-center">
       <img src="img/Group 500.png" class="img-fluid" alt="Partners">
     </div>
   </section>
-
-  <!-- Contact Modal -->
-  <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
+  
+<!-- Contact Modal -->
+<div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -201,24 +205,24 @@
         <div class="modal-body">
           <form action="https://getform.io/f/zaxdeypa" method="POST" id="contactForm">
             <div class="form-group">
-              <label for="email">Work Email</label>
+              <label for="email">Work email</label>
               <input type="email" class="form-control" id="email" name="email" required>
             </div>
-            <div class="form-group">
-              <label for="firstName">First Name</label>
-              <input type="text" class="form-control" id="firstName" name="firstName" required>
-            </div>
-            <div class="form-group">
-              <label for="lastName">Last Name</label>
-              <input type="text" class="form-control" id="lastName" name="lastName" required>
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="firstName">First name</label>
+                <input type="text" class="form-control" id="firstName" name="firstName" required>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="lastName">Last name</label>
+                <input type="text" class="form-control" id="lastName" name="lastName" required>
+              </div>
             </div>
             <div class="form-group form-check">
               <input type="checkbox" class="form-check-input" id="consent" name="consent" required>
               <label class="form-check-label" for="consent">I agree to Fyle's terms and conditions, and provide consent to send me communication.</label>
             </div>
-            <!-- Honeypot field to prevent spam -->
-            <input type="hidden" name="_gotcha" style="display:none !important">
-            <button type="submit" class="btn btn-danger">Contact Us</button>
+            <button type="submit" class="btn btn-primary btn-block">Contact Us</button>
           </form>
         </div>
       </div>
